feat: add login page

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <span>Application</span>
   <span class="example-spacer"></span>
-  <button class="button-signin" mat-raised-button color="primary">Sign in</button>
-  <button class="button-signup" mat-raised-button>Sign up</button>
+  <a routerLink="/login" class="button-signin" mat-raised-button color="primary">Sign in</a>
+  <a class="button-signup" mat-raised-button>Sign up</a>
 </mat-toolbar>
