feat: add register page

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -2,5 +2,5 @@
   <span>Application</span>
   <span class="example-spacer"></span>
   <a routerLink="/login" class="button-signin" mat-raised-button color="primary">Sign in</a>
-  <a class="button-signup" mat-raised-button>Sign up</a>
+  <a routerLink="/register" class="button-signup" mat-raised-button>Sign up</a>
 </mat-toolbar>
