--- a/src/app/features/homepage/homepage.component.html
+++ b/src/app/features/homepage/homepage.component.html
@@ -1,2 +1,9 @@
 <app-header></app-header>
-<app-started-button></app-started-button>
+<div class="go-testing-container">
+    <img class="home-image" src="assets/img/home-page.jpeg">
+    <div class="button-container">
+        <app-started-button></app-started-button>
+    </div>
+
+
+</div>
