--- a/src/app/features/homepage/homepage.component.html
+++ b/src/app/features/homepage/homepage.component.html
@@ -1,9 +1,14 @@
 <app-header></app-header>
 <div class="go-testing-container">
-    <img class="home-image" src="assets/img/home-page.jpeg">
+    <div class="image-comtainer">
+        <img class="home-image" src="assets/img/home-page.jpeg">
+    </div>
     <div class="button-container">
         <app-started-button></app-started-button>
     </div>
+</div>
 
+<div class="info-card-container">
+<app-info-card></app-info-card>
 
 </div>
