CReate specialist component, add psychologists images,fix home-page component,fix header component

--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,9 +1,5 @@
 $basic-color: #C1E9FC;
 
-body{
-  position: relative;
-}
-
 .example-spacer {
   flex: 1 1 auto;
 }
@@ -14,6 +10,8 @@ body{
 
 .mat-toolbar {
   background-color: $basic-color;
-  position: sticky;
+  position: fixed;
   top: 0;
+  width: 100%;
+  z-index: 99;
 }
