--- a/src/app/features/homepage/homepage.component.scss
+++ b/src/app/features/homepage/homepage.component.scss
@@ -1,3 +1,4 @@
+
 .go-testing-container{
     display: flex;
     height: 100vh;
@@ -10,17 +11,32 @@
     justify-content: center;
 }
 
+.image-comtainer{
+    padding: 30px;
+    flex: 1;
+}
+
 .home-image{
-width: 70vw;
+height: 90%;
 }
 
 .info-card-container{
     margin: 0 auto;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 50vw;
     padding: 50px;
     border-radius: 15px;
     background-color: rgba(64, 64, 64, 0.22);
+    // height: 100vh;
+
+}
+
+.specialist-card-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
 }
