--- a/src/app/features/questionnaire/questionnaire.component.html
+++ b/src/app/features/questionnaire/questionnaire.component.html
@@ -1,1 +1,4 @@
-<p>questionnaire works!</p>
+<app-header></app-header>
+<div class="container">
+  <img class="image" src="../../../assets/questionnaire-page.webp" alt="main image" width="600px">
+</div>
