create project info

--- a/src/app/features/homepage/homepage.component.html
+++ b/src/app/features/homepage/homepage.component.html
@@ -8,15 +8,22 @@
     </div>
 </div>
 
-<div class="info-card-container">
-    <app-info-card></app-info-card>
-    <div class="specialist-card-container" >
+<div class="card-container">
+    <h2>About Us</h2>
+    <div class="info-container" *ngFor="let item of projectInfo ">
+        <app-info-card [title]="item.title" [description]="item.description"></app-info-card>
+    </div>
+
+
+    <h2>Our Psychologists</h2>
+
+    <div class="specialist-container">
         <div *ngFor="let specialist of specialists ">
             <app-specialist-card [id]="specialist.id" [name]="specialist.name" [info]="specialist.info"
-            [image]="specialist.image"></app-specialist-card>
+                [image]="specialist.image"></app-specialist-card>
 
         </div>
-        
+
     </div>
 
 </div>
