--- a/src/app/features/homepage/homepage.component.scss
+++ b/src/app/features/homepage/homepage.component.scss
@@ -20,7 +20,7 @@
 height: 90%;
 }
 
-.info-card-container{
+.card-container{
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -34,7 +34,7 @@ height: 90%;
 
 }
 
-.specialist-card-container{
+.specialist-container{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
