--- a/src/app/core/components/info-card/info-card.component.html
+++ b/src/app/core/components/info-card/info-card.component.html
@@ -1,6 +1,5 @@
 <mat-card>
-    <mat-card-header>About Us</mat-card-header>
-    <mat-card-content> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-        ut.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+    <mat-card-header>{{title}}</mat-card-header>
+    <mat-card-content> {{description}}
     </mat-card-content>
 </mat-card>
