create footer, fix style on home page

--- a/src/app/core/components/specialist-card/specialist-card.component.html
+++ b/src/app/core/components/specialist-card/specialist-card.component.html
@@ -1,7 +1,11 @@
 <mat-card>
-    <img mat-card-avatar src={{image}}>
+    <figure>
+        <img mat-card-avatar src={{image}}>
+
+    
     <mat-card-title>{{name}}</mat-card-title>
     <mat-card-content>
        {{info}}
     </mat-card-content>
+</figure>
 </mat-card>
