--- a/src/app/core/components/info-card/info-card.component.html
+++ b/src/app/core/components/info-card/info-card.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-header>{{title}}</mat-card-header>
+    <mat-card-title>{{title}}</mat-card-title>
     <mat-card-content> {{description}}
     </mat-card-content>
 </mat-card>
