--- a/src/app/core/components/info-card/info-card.component.scss
+++ b/src/app/core/components/info-card/info-card.component.scss
@@ -1,3 +1,44 @@
-mat-card{
-    margin-bottom:20px ;
+$accent-color: #1a3088;
+$basic-color: #c1e9fc;
+
+mat-card {
+    margin-bottom: 50px;
+}
+
+mat-card-title {
+    padding: 10px;
+    color: $accent-color;
+}
+
+mat-card {
+    position: relative;
+    &::before,
+    &::after {
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        z-index: -1;
+        border: 2px solid $basic-color;
+        transition: all 0.25s ease-out;
+    }
+    &::before {
+        background-color: $basic-color;
+        top: -15px;
+        left: -15px;
+    }
+    &::after {
+        bottom: -15px;
+        right: -15px;
+    }
+    &:hover {
+        &::before {
+            top: 15px;
+            left: 15px;
+        }
+        &::after {
+            bottom: 15px;
+            right: 15px;
+        }
+    }
 }
