--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -14,4 +14,8 @@ $basic-color: #C1E9FC;
   top: 0;
   width: 100%;
   z-index: 99;
+  font-family: "Cormorant Garamond", serif;
+  a{
+    font-family: "Cormorant Garamond", serif;
+  }
 }
