--- a/src/app/core/components/specialist-card/specialist-card.component.scss
+++ b/src/app/core/components/specialist-card/specialist-card.component.scss
@@ -12,6 +12,13 @@ mat-card{
 
 .mat-mdc-card-title{
     align-self: center;
+	font-family: "Cormorant Garamond", serif;
+}
+
+.mat-mdc-card-content{
+	font-family: 'Eczar', serif;
+	font-size: 1.1em;
+
 }
 
  figure {
