--- a/src/app/core/components/specialist-card/specialist-card.component.scss
+++ b/src/app/core/components/specialist-card/specialist-card.component.scss
@@ -1,29 +1,32 @@
-mat-card{
-    width: 20vw;
-    height: 97%;
-    margin-bottom: 15px;
+$accent-color: #1a3088;
+
+mat-card {
+	width: 20vw;
+	height: 97%;
+	margin-bottom: 15px;
 }
 
-.mat-mdc-card-avatar{
-    width: 200px;
-    height: 250px;
-    border-radius: 0% 50%;
+.mat-mdc-card-avatar {
+	width: 196px;
+	height: 250px;
+	border-radius: 0% 50%;
 }
 
-.mat-mdc-card-title{
-    align-self: center;
+.mat-mdc-card-title {
+	align-self: center;
 	font-family: "Cormorant Garamond", serif;
+	color: $accent-color;
+	font-weight: 600;
 }
 
-.mat-mdc-card-content{
-	font-family: 'Eczar', serif;
+.mat-mdc-card-content {
+	font-family: "Eczar", serif;
 	font-size: 1.1em;
-
 }
 
- figure {
+figure {
 	position: relative;
-    overflow: hidden;
+	overflow: hidden;
 }
 figure::before {
 	position: absolute;
@@ -31,17 +34,17 @@ figure::before {
 	left: -133%;
 	z-index: 2;
 	display: block;
-	content: '';
+	content: "";
 	width: 50%;
 	height: 100%;
-	background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
-	background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+	background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 100%);
+	background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 100%);
 	-webkit-transform: skewX(-25deg);
 	transform: skewX(-25deg);
 }
 figure:hover::before {
-	-webkit-animation: shine .75s;
-	animation: shine .75s;
+	-webkit-animation: shine 0.75s;
+	animation: shine 0.75s;
 }
 
 @-webkit-keyframes shine {
