--- a/src/app/features/homepage/homepage.component.html
+++ b/src/app/features/homepage/homepage.component.html
@@ -4,7 +4,7 @@
         <img class="home-image" src="assets/img/home-page.jpeg">
     </div>
     <div class="button-container">
-        <app-started-button></app-started-button>
+        <app-started-button routerLink="/questionnaire"></app-started-button>
     </div>
 </div>
 
