--- a/src/app/features/homepage/homepage.component.scss
+++ b/src/app/features/homepage/homepage.component.scss
@@ -45,6 +45,5 @@ height: 90%;
 
 .call-container{
     display: flex;
-    justify-content: end;
-    padding: 50px;
+    justify-content: flex-end;
 }
