--- a/src/app/core/components/call-menu/call-menu.component.html
+++ b/src/app/core/components/call-menu/call-menu.component.html
@@ -1,6 +1,8 @@
-<button id="call-menu-buttton" mat-button [matMenuTriggerFor]="menu">Call</button>
+<div class="call-menu-container">
+  <button id="call-menu-buttton" mat-button color="warn" [matMenuTriggerFor]="menu">Call</button>
 <mat-menu #menu="matMenu">
-  <button mat-menu-item><mat-icon> call</mat-icon>Request a call</button>
-  <button mat-menu-item><mat-icon>phone_in_talk</mat-icon> Call immediately</button>
-  <button mat-menu-item><mat-icon> contact_phone</mat-icon> Register for therapy</button>
+  <button mat-menu-item (click)="openDialog()"><mat-icon> call</mat-icon>Request a call</button>
+  <button mat-menu-item routerLink="immediately-form"><mat-icon>phone_in_talk</mat-icon> Call immediately</button>
+  <button mat-menu-item routerLink="therapy-form"><mat-icon> contact_phone</mat-icon> Register for therapy</button>
 </mat-menu>
+</div>
