--- a/src/app/core/components/call-menu/call-menu.component.scss
+++ b/src/app/core/components/call-menu/call-menu.component.scss
@@ -1,6 +1,13 @@
 #call-menu-buttton {
-    border: 1px solid black;
+    border: 1px dashed rgb(247, 4, 121);
     border-radius: 50% 50%;
     padding: 40px 12px;
     font-size: 2em;
+}
+
+.call-menu-container{
+    display: flex;
+    width: 300px;
+    align-items: center;
+    justify-content: center;
 }
