--- a/src/app/core/components/call-form/call-form.component.html
+++ b/src/app/core/components/call-form/call-form.component.html
@@ -1,11 +1,9 @@
-<div class="form-overlay">
-    <div class="form-container">
-        <label class="formLabel">
-            Phone Number:
-            <input class="form-input" type="tel" id="phoneNumber" class="form-input" minlength="8" maxlength="30"
-                placeholder="Enter your phone number" [(ngModel)]="phoneNumber">
-        </label>
-    </div>
+<div class="form-container">
+    <label class="formLabel">
+        Fill phone number:
+        <input class="form-input" type="tel" id="phoneNumber" class="form-input" minlength="8" maxlength="30"
+            placeholder="Enter your phone number" [(ngModel)]="phoneNumber">
+    </label>
 
     <div class="button-container">
         <button class="save-button button" id="save" routerLink="/" (click)="add(phoneNumber)">&#10003;</button>
