--- a/src/app/core/components/call-form/call-form.component.scss
+++ b/src/app/core/components/call-form/call-form.component.scss
@@ -1,33 +1,55 @@
-
+* {
+    font-family: "Cormorant Garamond", serif;
+}
 .form-container {
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(204, 200, 200, 0.2);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 50px;
-
 }
 
-.form-input{
-    padding: 10px;
+.form-input {
+    padding: 5px;
 }
 
 input:invalid {
-    border: 1px dashed red;
+    border: 2px solid red;
+    border-radius: 2px;
+
+    &:focus {
+        outline: none;
+    }
 }
 
-.button-container{
+.formLabel {
+    margin: 20px;
+    font-size: 1.3em;
+}
+
+.form-title {
+    color: #1a3088;
+    font-weight: 600;
+    font-size: 2em;
+}
+
+.text-container {
+    color: red;
+}
+
+.button-container {
     display: flex;
     justify-content: center;
 }
 
-.save-button{
+.save-button {
     margin-right: 10px;
 }
 
-.button{
+.button {
     padding: 5px 10px;
+    width: 45px;
     font-size: 1.5em;
     cursor: pointer;
 }
