--- a/src/app/core/components/im-call-form/im-call-form.component.html
+++ b/src/app/core/components/im-call-form/im-call-form.component.html
@@ -1,1 +1,13 @@
-<p>im-call-form works!</p>
+<div class="form-container">
+    <h2 class="form-title">Call immediately!</h2>
+
+    <div class="text-container">
+        <p>+38(063)11-11-111</p>
+        <p>+38(097)22-22-222</p>
+        <p>+38(050)33-33-333</p>
+    </div>
+
+    <div class="button-container">
+        <button class="save-button button" id="save" (click)="close()">&#10003;</button>
+    </div>
+</div>
