--- a/src/app/features/homepage/homepage.component.html
+++ b/src/app/features/homepage/homepage.component.html
@@ -29,7 +29,7 @@
 </div>
 
 <div class="call-container">
-<app-call-menu></app-call-menu>
+<app-call-menu [specialists]="specialists"></app-call-menu>
 </div>
 
 <app-footer></app-footer>
