--- a/src/app/core/components/call-menu/call-menu.component.scss
+++ b/src/app/core/components/call-menu/call-menu.component.scss
@@ -1,13 +1,17 @@
+$call-button-color: rgb(247, 4, 121);
+
 #call-menu-buttton {
-    border: 1px dashed rgb(247, 4, 121);
+    border: 1px dashed $call-button-color;
+    color: $call-button-color ;
     border-radius: 50% 50%;
     padding: 40px 12px;
     font-size: 2em;
+    font-weight: 600;
+
 }
 
 .call-menu-container{
     display: flex;
-    width: 300px;
     align-items: center;
     justify-content: center;
 }
