--- a/src/app/core/components/therapy-form/therapy-form.component.scss
+++ b/src/app/core/components/therapy-form/therapy-form.component.scss
@@ -7,7 +7,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 50px;
+    padding: 40px;
+    width: 500px;
 }
 
 .form-input {
@@ -34,8 +35,17 @@ input:invalid {
     font-size: 2em;
 }
 
+.register-form-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
 .text-container {
     color: red;
+    font-size: 1.4em;
+    padding: 40px;
 }
 
 .button-container {
