fix: crop and update image

--- a/src/app/features/questionnaire/questionnaire.component.html
+++ b/src/app/features/questionnaire/questionnaire.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 <div class="container">
-  <img class="image" src="../../../assets/questionnaire-page.webp" alt="main image" width="600px">
+  <img class="image" src="../../../assets/img/questionnaire-page.jpeg" alt="main image" width="600px">
   <app-form-extended [questions]="questions"></app-form-extended>
 </div>
