--- a/src/app/features/questionnaire/questionnaire.component.scss
+++ b/src/app/features/questionnaire/questionnaire.component.scss
@@ -1,5 +1,5 @@
 .container {
-  min-height: calc(100vh - 64px);
+  min-height: 100vh;
 
   background: rgb(255, 255, 255);
   background: linear-gradient(180deg, rgba(255, 255, 255, 1) 43%, rgba(0, 159, 255, 1) 100%);
@@ -9,5 +9,5 @@
 }
 
 .image {
-  margin-top: 3rem;
+  margin-top: 6rem;
 }
