--- a/src/app/features/result/result.component.html
+++ b/src/app/features/result/result.component.html
@@ -6,7 +6,7 @@
     <mat-card>
       <mat-card-title class="card-title">Beck scale</mat-card-title>
       <mat-card-content>
-        <a routerLink="/questionnaire" mat-raised-button color="primary">Take test again</a>
+        <a mat-raised-button color="primary" (click)="navitageToQuestionnairePage()">Take test again</a>
       </mat-card-content>
     </mat-card>
 
