--- a/src/app/core/components/started-button/started-button.component.html
+++ b/src/app/core/components/started-button/started-button.component.html
@@ -1,4 +1,4 @@
-<button id="started-button" color="warn" mat-stroked-button routerLink="/questionnaire">Get started</button>
+<button id="started-button" color="warn" mat-stroked-button routerLink="/questionnaires">Get started</button>
 
 
 
