fix: crop and update image on result page

--- a/src/app/features/result/result.component.html
+++ b/src/app/features/result/result.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="container">
-  <img class="image" src="../../../assets/result-page.webp" alt="result image" width="600px">
+  <img class="image" src="../../../assets/img/result-page.jpeg`" alt="result image" width="600px">
 
   <div class="cards">
     <mat-card>
