--- a/src/app/features/result/result.component.scss
+++ b/src/app/features/result/result.component.scss
@@ -2,7 +2,7 @@
   min-height: calc(100vh - 64px);
 
   background: rgb(255, 255, 255);
-  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 33%, rgba(0, 159, 255, 1) 100%);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 35%, rgba(0, 159, 255, 1) 100%);
 
   display: grid;
   justify-content: center;
@@ -12,7 +12,7 @@
 }
 
 .image {
-  margin-block: 3rem;
+  margin-block: 5rem 3rem;
 }
 
 .cards {
