training html WIP

--- a/src/app/features/trainings/trainings.component.html
+++ b/src/app/features/trainings/trainings.component.html
@@ -1,1 +1,9 @@
-<p>trainings works!</p>
+<app-header></app-header>
+
+<div class="image-container">
+    <img src="../../../assets/img/training.jpeg" alt="">
+</div>
+<div class="info-container">
+
+</div>
+<app-footer></app-footer>
