--- a/src/app/features/trainings/trainings.component.html
+++ b/src/app/features/trainings/trainings.component.html
@@ -4,6 +4,8 @@
     <img src="../../../assets/img/training.jpeg" alt="">
 </div>
 <div class="info-container">
-
+    <div *ngFor="let item of articles ">
+        <app-article-card [title]="item.title" [description]="item.description"></app-article-card>
+    </div>
 </div>
 <app-footer></app-footer>
