--- a/src/app/features/trainings/trainings.component.scss
+++ b/src/app/features/trainings/trainings.component.scss
@@ -7,7 +7,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    // justify-content: center;
     width: 50vw;
     height: 100vw;
     padding: 50px;
@@ -15,3 +15,13 @@ body{
     background-color: rgba(64, 64, 64, 0.22);
 }
 
+.image-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 600px;
+
+    img{
+        width: 600px;
+    }
+}
