create article details component, fix article mock-data, fix article component style

--- a/src/app/features/trainings/components/article-card/article-card.component.html
+++ b/src/app/features/trainings/components/article-card/article-card.component.html
@@ -2,4 +2,6 @@
     <mat-card-title>{{title}}</mat-card-title>
     <mat-card-content> {{description}}
     </mat-card-content>
+    <span class="tap-span">(Tap  card to read more)</span>
+
 </mat-card>
