--- a/src/app/features/trainings/trainings.component.scss
+++ b/src/app/features/trainings/trainings.component.scss
@@ -11,6 +11,12 @@ body{
     padding: 50px;
     border-radius: 15px;
     background-color: rgba(64, 64, 64, 0.22);
+
+    h2{
+        font-size: 2em;
+    font-family: "Cormorant Garamond", serif;
+
+    }
 }
 
 .image-container{
