fix footer and trainings components style

--- a/src/app/features/trainings/components/article-details/article-details.component.html
+++ b/src/app/features/trainings/components/article-details/article-details.component.html
@@ -8,6 +8,6 @@
     </mat-dialog-content>
 
     <div  class="button-container">
-        <button class="cancel-button button" id="cancel" (click)="close()">&#10008;</button>
+        <button mat-stroked-button color="primary" class="cancel-button button" id="cancel" (click)="close()">&#10008;</button>
     </div>
 </div>
