--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -1,11 +1,10 @@
-$basic-color: #C1E9FC;
+$basic-color: #47809a89;
 
 
 footer{
     height: 100px;
     display: flex;
     padding: 10px;
-    margin-top: 20px;
     background-color: $basic-color;
 }
 
