--- a/src/app/features/trainings/components/article-details/article-details.component.scss
+++ b/src/app/features/trainings/components/article-details/article-details.component.scss
@@ -4,11 +4,16 @@
 
 $accent-color: #1a3088;
 
-.dialog-container > h2 {
-    font-family: "Cormorant Garamond", serif;
-    text-align: center;
-    color: $accent-color;
-    font-size: 2.5em;
+.dialog-container {
+    display: flex;
+    flex-direction: column;
+
+    h2 {
+        font-family: "Cormorant Garamond", serif;
+        text-align: center;
+        color: $accent-color;
+        font-size: 2.5em;
+    }
 }
 
 .mat-mdc-dialog-content {
@@ -18,4 +23,23 @@ $accent-color: #1a3088;
     span {
         align-self: flex-end;
     }
+}
+
+.button-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+.button {
+    padding: 5px 10px;
+    width: 45px;
+    font-size: 1.5em;
+    cursor: pointer;
+
+    // &:focus{
+    //     outline: none;
+
+    // }
 }
