--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -1,1 +1,13 @@
-<p>profile works!</p>
+<app-header></app-header>
+<div class="container-body">
+    <div class="image-container">
+        <img src="../../../assets/img/profile.png" alt="">
+        <input type="file">
+    </div>
+    <div class="info-container">
+        <h2>Profile</h2>
+       
+    </div>
+</div>
+
+<app-footer></app-footer>
