--- a/src/app/core/components/call-menu/call-menu.component.scss
+++ b/src/app/core/components/call-menu/call-menu.component.scss
@@ -1,16 +1,21 @@
 $call-button-color: rgb(247, 4, 121);
 
 #call-menu-buttton {
+    font-family: "Cormorant Garamond", serif;
     border: 1px dashed $call-button-color;
-    color: $call-button-color ;
+    color: $call-button-color;
     border-radius: 50% 50%;
     padding: 40px 12px;
     font-size: 2em;
     font-weight: 600;
 
+    &:hover {
+        box-shadow: #fff 0 -1px 4px, #df7caa 0 -2px 10px, #eb709e 0 -10px 20px, #edc0d4 0 -18px 40px,
+            5px 5px 15px 5px rgb(0 0 0 / 0%);
+    }
 }
 
-.call-menu-container{
+.call-menu-container {
     display: flex;
     align-items: center;
     justify-content: center;
