--- a/src/app/features/profile/profile.component.scss
+++ b/src/app/features/profile/profile.component.scss
@@ -1,3 +1,10 @@
+$accent-color: #1a3088;
+
+
+* {
+    box-sizing: border-box;
+}
+
 body {
     position: relative;
 }
@@ -7,9 +14,12 @@ body {
     position: relative;
     z-index: 0;
     padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 70px;
 }
 
-.info-container {
+.setting-container {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -30,10 +40,35 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 600px;
+    flex: 1;
 
     img {
         width: 400px;
+        height: 400px;
+        object-fit: cover;
         margin-bottom: 50px;
+        border-radius: 50%;
+    }
+}
+
+.profile-info-container {
+    display: flex;
+    flex-wrap: wrap;
+
+    .user-info-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        flex: 1;
+
+        .user-info-item {
+            display: flex;
+
+            &:first-of-type h2,h3,p{
+                color: $accent-color;
+                margin-right: 20px;
+            }
+        }
     }
 }
