create expansion panel comment

--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -5,21 +5,23 @@
             <img src={{profileImage}} alt="">
         </div>
         <div class="user-info-container">
-            <div class="user-info-item">
-                <h2>Name:</h2>
-                <h2>{{userName}}</h2>
-            </div>
-            <div class="user-info-item">
-                <h3>Birthday:</h3>
-                <h3>{{birthday}}</h3>
-            </div>
-            <div class="user-info-item">
-                <p>Country:</p>
-                <p>{{country}}</p>
-            </div>
-            <div class="user-info-item">
-                <p>Favourite Color:</p>
-                <p>{{favouriteColor}}</p>
+            <div class="user-info">
+                <div class="user-info-item">
+                    <h2>Name:</h2>
+                    <h2>{{userName}}</h2>
+                </div>
+                <div class="user-info-item">
+                    <h3>Birthday:</h3>
+                    <h3>{{birthday}}</h3>
+                </div>
+                <div class="user-info-item">
+                    <p>Country:</p>
+                    <p>{{country}}</p>
+                </div>
+                <div class="user-info-item">
+                    <p>Favourite Color:</p>
+                    <p>{{favouriteColor}}</p>
+                </div>
             </div>
         </div>
     </div>
@@ -27,6 +29,7 @@
     <div class="setting-container">
         <h2>Profile</h2>
         <input type="file">
+        <app-expansion-panel></app-expansion-panel>
 
     </div>
 </div>
