--- a/src/app/features/profile/profile.component.scss
+++ b/src/app/features/profile/profile.component.scss
@@ -62,13 +62,20 @@ body {
         justify-content: center;
         flex: 1;
 
-        .user-info-item {
+        .user-info{
             display: flex;
+            flex-direction: column;
+            padding: 20px;
 
-            &:first-of-type h2,h3,p{
-                color: $accent-color;
-                margin-right: 20px;
+            .user-info-item {
+                display: flex;
+    
+                &:first-of-type h2,h3,p{
+                    color: $accent-color;
+                    margin-right: 20px;
+                }
             }
         }
+
     }
 }
