create email and password panel. Create user mock data

--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -29,7 +29,7 @@
     <div class="setting-container">
         <h2>Profile</h2>
         <input type="file">
-        <app-expansion-panel></app-expansion-panel>
+        <app-email-panel [userEmail]="user.email"></app-email-panel>
 
     </div>
 </div>
