password panel WIP

--- a/src/app/features/profile/components/password-panel/password-panel.component.html
+++ b/src/app/features/profile/components/password-panel/password-panel.component.html
@@ -1,1 +1,41 @@
-<p>password-panel works!</p>
+<mat-accordion>
+    <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                Password
+            </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div class="info-item-container">
+            <div class="info-item">
+                <button (click)="changePas = !changePas" mat-raised-button>Change password</button>
+            </div>
+            <form class="form" *ngIf="changePas">
+                <mat-form-field appearance="fill">
+                    <mat-label>Enter Your Current assword</mat-label>
+                    <input matInput [type]="hide ? 'password' : 'text'" [formControl]="curPasFormControl">
+                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+                        [attr.aria-pressed]="hide">
+                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    </button>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Enter Your New Password</mat-label>
+                    <input matInput [type]="hide ? 'password' : 'text'" [formControl]="newPasFormControl">
+                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+                        [attr.aria-pressed]="hide">
+                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    </button>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Confirm Your New Password</mat-label>
+                    <input matInput [type]="hide ? 'password' : 'text'" [formControl]="confirmPasFormControl">
+                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+                        [attr.aria-pressed]="hide">
+                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    </button>
+                </mat-form-field>
+                <button class="save-button button" id="save" (click)="add()">&#10003;</button>
+            </form>
+        </div>
+    </mat-expansion-panel>
+</mat-accordion>
