--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -30,6 +30,7 @@
         <h2>Profile</h2>
         <input type="file">
         <app-email-panel [userEmail]="user.email"></app-email-panel>
+        <app-password-panel [userPas]="user.password"></app-password-panel>
 
     </div>
 </div>
