--- a/src/app/features/signup/signup.component.html
+++ b/src/app/features/signup/signup.component.html
@@ -1,1 +1,58 @@
-<p>signup works!</p>
+<mat-toolbar>
+  <span class="example-spacer"></span>
+  <a routerLink="/login" class="button-signup" mat-raised-button>Sign in</a>
+</mat-toolbar>
+
+<div class="container">
+  <img src="../../../assets/img/register-page.jpeg" alt="login main image" width="800">
+  <form class="form" (submit)="$event.preventDefault()" [formGroup]="registerForm">
+    <mat-form-field appearance="outline">
+      <mat-label>Enter your name</mat-label>
+
+      <input matInput formControlName="name" required>
+      <mat-error *ngIf="name.invalid && name.touched && name.errors?.required">The name field is required
+      </mat-error>
+      <mat-error *ngIf="name.invalid && name.errors?.minlength">The name should be at least 2
+        characters</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Enter your email</mat-label>
+
+      <input matInput formControlName="email" required>
+
+      <mat-error *ngIf="email.invalid && email.touched && email.errors?.required">The email field is required
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Enter your password</mat-label>
+
+      <input matInput required [type]="isPasswordHidden ? 'password' : 'text'" formControlName="password">
+
+      <button mat-icon-button matSuffix (click)="isPasswordHidden = !isPasswordHidden"
+        [attr.aria-label]="'Hide password'" [attr.aria-pressed]="isPasswordHidden">
+        <mat-icon>{{isPasswordHidden ? 'visibility_off' : 'visibility'}}</mat-icon>
+      </button>
+
+      <mat-error *ngIf="password.invalid && password.touched && password.errors?.required">The password field is
+        required</mat-error>
+
+      <mat-error *ngIf="password.invalid && password.touched && password.errors?.minlength">The password should be at
+        least 6
+        characters</mat-error>
+
+      <mat-error *ngIf=" password.invalid && password.touched && password.errors?.maxlength">The password should be
+        maximum 24 characters
+      </mat-error>
+
+      <mat-error *ngIf=" password.invalid && password.touched && password.errors?.pattern">Must have at least one
+        uppercase letter, number
+        and special symbol
+      </mat-error>
+    </mat-form-field>
+
+    <button mat-raised-button color="primary" type="submit" routerLink="/login">Sign Up</button>
+  </form>
+
+</div>
