--- a/src/app/features/signin/signin.component.html
+++ b/src/app/features/signin/signin.component.html
@@ -42,6 +42,7 @@
     </mat-form-field>
 
     <button mat-raised-button color="primary" type="submit" routerLink="/">Sign In</button>
+    <a routerLink="/reset" class="reset">Forgot password?</a>
   </form>
   <img src="../../../assets/img/login.jpeg" alt="login main image" width="700">
 </div>
