--- a/src/app/features/restore/restore.component.html
+++ b/src/app/features/restore/restore.component.html
@@ -11,10 +11,10 @@
 
       <input matInput formControlName="email" required>
 
-      <mat-error *ngIf="email.invalid && email.errors?.required">The email field is required
+      <mat-error *ngIf="email.invalid && email.errors?.['required']">The email field is required
       </mat-error>
       
-      <mat-error *ngIf="email.invalid && email.errors?.email">Please enter a valid email address
+      <mat-error *ngIf="email.invalid && email.errors?.['email']">Please enter a valid email address
       </mat-error>
     </mat-form-field>
 
