--- a/src/app/features/signin/signin.component.html
+++ b/src/app/features/signin/signin.component.html
@@ -4,13 +4,16 @@
 </mat-toolbar>
 
 <div class="container">
-  <form class="form" (submit)="$event.preventDefault()" [formGroup]="loginForm">
+  <form class="form" (submit)="submit($event)" [formGroup]="loginForm">
     <mat-form-field appearance="outline">
       <mat-label>Enter your email</mat-label>
 
       <input matInput formControlName="email" required>
 
-      <mat-error *ngIf="email.invalid && email.touched && email.errors?.required">The email field is required
+      <mat-error *ngIf="email.invalid && email.errors?.['required']">The email field is required
+      </mat-error>
+
+      <mat-error *ngIf="email.invalid && email.errors?.['email']">Please enter a valid email address
       </mat-error>
     </mat-form-field>
 
@@ -24,25 +27,28 @@
         <mat-icon>{{isPasswordHidden ? 'visibility_off' : 'visibility'}}</mat-icon>
       </button>
 
-      <mat-error *ngIf="password.invalid && password.touched && password.errors?.required">The password field is
+      <mat-error *ngIf="password.invalid && password.errors?.['required']">The password field is
         required</mat-error>
 
-      <mat-error *ngIf="password.invalid && password.touched && password.errors?.minlength">The password should be at
+      <mat-error *ngIf="password.invalid && password.errors?.['minlength']">The password should be
+        at
         least 6
         characters</mat-error>
 
-      <mat-error *ngIf=" password.invalid && password.touched && password.errors?.maxlength">The password should be
+      <mat-error *ngIf=" password.invalid && password.errors?.['maxlength']">The password should be
         maximum 24 characters
       </mat-error>
 
-      <mat-error *ngIf=" password.invalid && password.touched && password.errors?.pattern">Must have at least one
+      <mat-error *ngIf=" password.invalid && password.errors?.['pattern']">Must have at least one
         uppercase letter, number
         and special symbol
       </mat-error>
     </mat-form-field>
 
-    <button mat-raised-button color="primary" type="submit" routerLink="/">Sign In</button>
+    <button mat-raised-button color="primary" type="submit">Sign In</button>
+
     <a routerLink="/reset" class="reset">Forgot password?</a>
   </form>
-  <img src="../../../assets/img/login.jpeg" alt="login main image" width="700">
+
+  <img src="../../../assets/img/login-page.jpeg" alt="login main image" width="700">
 </div>
