--- a/src/app/features/signup/signup.component.html
+++ b/src/app/features/signup/signup.component.html
@@ -5,14 +5,16 @@
 
 <div class="container">
   <img src="../../../assets/img/register-page.jpeg" alt="login main image" width="800">
-  <form class="form" (submit)="$event.preventDefault()" [formGroup]="registerForm">
+  <form class="form" (submit)="submit($event)" [formGroup]="registerForm">
     <mat-form-field appearance="outline">
       <mat-label>Enter your name</mat-label>
 
       <input matInput formControlName="name" required>
-      <mat-error *ngIf="name.invalid && name.touched && name.errors?.required">The name field is required
+
+      <mat-error *ngIf="name.invalid && name.errors?.['required']">The name field is required
       </mat-error>
-      <mat-error *ngIf="name.invalid && name.errors?.minlength">The name should be at least 2
+
+      <mat-error *ngIf="name.invalid && name.errors?.['minlength']">The name should be at least 2
         characters</mat-error>
     </mat-form-field>
 
@@ -21,7 +23,10 @@
 
       <input matInput formControlName="email" required>
 
-      <mat-error *ngIf="email.invalid && email.touched && email.errors?.required">The email field is required
+      <mat-error *ngIf="email.invalid && email.errors?.['required']">The email field is required
+      </mat-error>
+
+      <mat-error *ngIf="email.invalid && email.errors?.['email']">Please enter a valid email address
       </mat-error>
     </mat-form-field>
 
@@ -35,24 +40,24 @@
         <mat-icon>{{isPasswordHidden ? 'visibility_off' : 'visibility'}}</mat-icon>
       </button>
 
-      <mat-error *ngIf="password.invalid && password.touched && password.errors?.required">The password field is
+      <mat-error *ngIf="password.invalid && password.errors?.['required']">The password field is
         required</mat-error>
 
-      <mat-error *ngIf="password.invalid && password.touched && password.errors?.minlength">The password should be at
+      <mat-error *ngIf="password.invalid && password.errors?.['minlength']">The password should be at
         least 6
         characters</mat-error>
 
-      <mat-error *ngIf=" password.invalid && password.touched && password.errors?.maxlength">The password should be
+      <mat-error *ngIf=" password.invalid && password.errors?.['maxlength']">The password should be
         maximum 24 characters
       </mat-error>
 
-      <mat-error *ngIf=" password.invalid && password.touched && password.errors?.pattern">Must have at least one
+      <mat-error *ngIf=" password.invalid && password.errors?.['pattern']">Must have at least one
         uppercase letter, number
         and special symbol
       </mat-error>
     </mat-form-field>
 
-    <button mat-raised-button color="primary" type="submit" routerLink="/login">Sign Up</button>
+    <button mat-raised-button color="primary" type="submit">Sign Up</button>
   </form>
 
 </div>
