refactor: refactor restore password page

--- a/src/app/features/restore-password/restore-password.component.html
+++ b/src/app/features/restore-password/restore-password.component.html
@@ -13,12 +13,12 @@
 
       <mat-error *ngIf="email.invalid && email.errors?.['required']">The email field is required
       </mat-error>
-      
+
       <mat-error *ngIf="email.invalid && email.errors?.['email']">Please enter a valid email address
       </mat-error>
     </mat-form-field>
 
-    <button mat-raised-button color="primary" type="submit">Reset password</button>
+    <button mat-raised-button color="primary" type="submit" [disabled]="restoreForm.invalid">Reset password</button>
   </form>
 
 </div>
