--- a/src/app/features/restore-password/restore-password.component.scss
+++ b/src/app/features/restore-password/restore-password.component.scss
@@ -33,7 +33,7 @@ img {
   justify-self: center;
 }
 
-.example-container mat-form-field + mat-form-field {
+.example-container mat-form-field+mat-form-field {
   margin-left: 8px;
 }
 
