--- a/src/app/features/signin/signin.component.html
+++ b/src/app/features/signin/signin.component.html
@@ -47,7 +47,7 @@
 
     <button mat-raised-button color="primary" type="submit">Sign In</button>
 
-    <a routerLink="/reset" class="reset">Forgot password?</a>
+    <a routerLink="/restore" class="reset">Forgot password?</a>
   </form>
 
   <img src="../../../assets/img/login-page.jpeg" alt="login main image" width="700">
